// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SegmentedArc automatically increases the component's height when arcDegree is greater than 180 degrees 1`] = `
{
  "children": [
    <Svg
      height={249.8975806496848}
      preserveAspectRatio="xMidYMid meet"
      width={240}
    >
      <Context.Provider
        value={
          {
            "animationDuration": 1000,
            "arcAnimatedValue": 0,
            "arcSegmentDegree": 66,
            "arcsStart": -45,
            "capInnerColor": "#28E037",
            "capOuterColor": "#FFFFFF",
            "center": 120,
            "emptyArcWidth": 8,
            "filledArcWidth": 8,
            "isAnimated": true,
            "lastFilledSegment": {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Fourth Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 223,
              "filled": 223,
              "filledColor": "#0000FF",
              "isComplete": true,
              "start": 157.5,
            },
            "margin": 12,
            "radius": 100,
            "ranges": [],
            "rangesTextColor": "#000000",
            "rangesTextStyle": {
              "fontSize": 12,
            },
            "spaceBetweenSegments": 2,
            "totalArcs": 4,
          }
        }
      >
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "First Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 20.5,
              "filled": 20.5,
              "filledColor": "#FF0000",
              "isComplete": true,
              "start": -45,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Second Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 88,
              "filled": 88,
              "filledColor": "#FFA500",
              "isComplete": true,
              "start": 22.5,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Third Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 155.5,
              "filled": 155.5,
              "filledColor": "#00FF00",
              "isComplete": true,
              "start": 90,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Fourth Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 223,
              "filled": 223,
              "filledColor": "#0000FF",
              "isComplete": true,
              "start": 157.5,
            }
          }
        />
        <Cap />
      </Context.Provider>
    </Svg>,
    undefined,
  ],
  "style": {
    "alignItems": "center",
  },
  "testID": "container",
}
`;

exports[`SegmentedArc renders arc with ranges: shows ranges 1`] = `
{
  "children": [
    <Svg
      height={126}
      preserveAspectRatio="xMidYMid meet"
      width={240}
    >
      <Context.Provider
        value={
          {
            "animationDuration": 1000,
            "arcAnimatedValue": 0,
            "arcSegmentDegree": 43.5,
            "arcsStart": 0,
            "capInnerColor": "#28E037",
            "capOuterColor": "#FFFFFF",
            "center": 120,
            "emptyArcWidth": 8,
            "filledArcWidth": 8,
            "isAnimated": true,
            "lastFilledSegment": {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Fourth Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 178,
              "filled": 178,
              "filledColor": "#0000FF",
              "isComplete": true,
              "start": 135,
            },
            "margin": 12,
            "radius": 100,
            "ranges": [
              "1.25",
              "2.5",
              "3.75",
              "5",
            ],
            "rangesTextColor": "#000000",
            "rangesTextStyle": {
              "fontSize": 12,
            },
            "spaceBetweenSegments": 2,
            "totalArcs": 4,
          }
        }
      >
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "First Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 43,
              "filled": 43,
              "filledColor": "#FF0000",
              "isComplete": true,
              "start": 0,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Second Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 88,
              "filled": 88,
              "filledColor": "#FFA500",
              "isComplete": true,
              "start": 45,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Third Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 133,
              "filled": 133,
              "filledColor": "#00FF00",
              "isComplete": true,
              "start": 90,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Fourth Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 178,
              "filled": 178,
              "filledColor": "#0000FF",
              "isComplete": true,
              "start": 135,
            }
          }
        />
        <Cap />
        <RangesDisplay />
      </Context.Provider>
    </Svg>,
    undefined,
  ],
  "style": {
    "alignItems": "center",
  },
  "testID": "container",
}
`;

exports[`SegmentedArc renders default 1`] = `
{
  "children": [
    <Svg
      height={126}
      preserveAspectRatio="xMidYMid meet"
      width={240}
    >
      <Context.Provider
        value={
          {
            "animationDuration": 1000,
            "arcAnimatedValue": 0,
            "arcSegmentDegree": 43.5,
            "arcsStart": 0,
            "capInnerColor": "#28E037",
            "capOuterColor": "#FFFFFF",
            "center": 120,
            "emptyArcWidth": 8,
            "filledArcWidth": 8,
            "isAnimated": true,
            "lastFilledSegment": {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Fourth Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 178,
              "filled": 178,
              "filledColor": "#0000FF",
              "isComplete": true,
              "start": 135,
            },
            "margin": 12,
            "radius": 100,
            "ranges": [],
            "rangesTextColor": "#000000",
            "rangesTextStyle": {
              "fontSize": 12,
            },
            "spaceBetweenSegments": 2,
            "totalArcs": 4,
          }
        }
      >
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "First Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 43,
              "filled": 43,
              "filledColor": "#FF0000",
              "isComplete": true,
              "start": 0,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Second Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 88,
              "filled": 88,
              "filledColor": "#FFA500",
              "isComplete": true,
              "start": 45,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Third Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 133,
              "filled": 133,
              "filledColor": "#00FF00",
              "isComplete": true,
              "start": 90,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Fourth Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 178,
              "filled": 178,
              "filledColor": "#0000FF",
              "isComplete": true,
              "start": 135,
            }
          }
        />
        <Cap />
      </Context.Provider>
    </Svg>,
    undefined,
  ],
  "style": {
    "alignItems": "center",
  },
  "testID": "container",
}
`;

exports[`SegmentedArc renders segments with arc degree scales 1`] = `
{
  "children": [
    <Svg
      height={126}
      preserveAspectRatio="xMidYMid meet"
      width={240}
    >
      <Context.Provider
        value={
          {
            "animationDuration": 1000,
            "arcAnimatedValue": 0,
            "arcSegmentDegree": 58.666666666666664,
            "arcsStart": 0,
            "capInnerColor": "#28E037",
            "capOuterColor": "#FFFFFF",
            "center": 120,
            "emptyArcWidth": 8,
            "filledArcWidth": 8,
            "isAnimated": true,
            "lastFilledSegment": {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Third Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 178,
              "filled": 178,
              "filledColor": "#FFA500",
              "isComplete": true,
              "start": 144,
            },
            "margin": 12,
            "radius": 100,
            "ranges": [],
            "rangesTextColor": "#000000",
            "rangesTextStyle": {
              "fontSize": 12,
            },
            "spaceBetweenSegments": 2,
            "totalArcs": 3,
          }
        }
      >
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "First Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 88,
              "filled": 88,
              "filledColor": "#FF0000",
              "isComplete": true,
              "start": 0,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Second Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 142,
              "filled": 142,
              "filledColor": "#FFA500",
              "isComplete": true,
              "start": 90,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Third Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 178,
              "filled": 178,
              "filledColor": "#FFA500",
              "isComplete": true,
              "start": 144,
            }
          }
        />
        <Cap />
      </Context.Provider>
    </Svg>,
    undefined,
  ],
  "style": {
    "alignItems": "center",
  },
  "testID": "container",
}
`;

exports[`SegmentedArc renders with ensured arc degree scales when missing from segments 1`] = `
{
  "children": [
    <Svg
      height={126}
      preserveAspectRatio="xMidYMid meet"
      width={240}
    >
      <Context.Provider
        value={
          {
            "animationDuration": 1000,
            "arcAnimatedValue": 0,
            "arcSegmentDegree": 58.666666666666664,
            "arcsStart": 0,
            "capInnerColor": "#28E037",
            "capOuterColor": "#FFFFFF",
            "center": 120,
            "emptyArcWidth": 8,
            "filledArcWidth": 8,
            "isAnimated": true,
            "lastFilledSegment": {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Third Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 178,
              "filled": 178,
              "filledColor": "#FFA500",
              "isComplete": true,
              "start": 135,
            },
            "margin": 12,
            "radius": 100,
            "ranges": [],
            "rangesTextColor": "#000000",
            "rangesTextStyle": {
              "fontSize": 12,
            },
            "spaceBetweenSegments": 2,
            "totalArcs": 3,
          }
        }
      >
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "First Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 88,
              "filled": 88,
              "filledColor": "#FF0000",
              "isComplete": true,
              "start": 0,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Second Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 133,
              "filled": 133,
              "filledColor": "#FFA500",
              "isComplete": true,
              "start": 90,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Third Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 178,
              "filled": 178,
              "filledColor": "#FFA500",
              "isComplete": true,
              "start": 135,
            }
          }
        />
        <Cap />
      </Context.Provider>
    </Svg>,
    undefined,
  ],
  "style": {
    "alignItems": "center",
  },
  "testID": "container",
}
`;

exports[`SegmentedArc renders with middle content 1`] = `
{
  "children": [
    <Svg
      height={126}
      preserveAspectRatio="xMidYMid meet"
      width={240}
    >
      <Context.Provider
        value={
          {
            "animationDuration": 1000,
            "arcAnimatedValue": 0,
            "arcSegmentDegree": 43.5,
            "arcsStart": 0,
            "capInnerColor": "#28E037",
            "capOuterColor": "#FFFFFF",
            "center": 120,
            "emptyArcWidth": 8,
            "filledArcWidth": 8,
            "isAnimated": true,
            "lastFilledSegment": {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Fourth Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 178,
              "filled": 178,
              "filledColor": "#0000FF",
              "isComplete": true,
              "start": 135,
            },
            "margin": 12,
            "radius": 100,
            "ranges": [],
            "rangesTextColor": "#000000",
            "rangesTextStyle": {
              "fontSize": 12,
            },
            "spaceBetweenSegments": 2,
            "totalArcs": 4,
          }
        }
      >
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "First Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 43,
              "filled": 43,
              "filledColor": "#FF0000",
              "isComplete": true,
              "start": 0,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Second Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 88,
              "filled": 88,
              "filledColor": "#FFA500",
              "isComplete": true,
              "start": 45,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Third Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 133,
              "filled": 133,
              "filledColor": "#00FF00",
              "isComplete": true,
              "start": 90,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Fourth Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 178,
              "filled": 178,
              "filledColor": "#0000FF",
              "isComplete": true,
              "start": 135,
            }
          }
        />
        <Cap />
      </Context.Provider>
    </Svg>,
    <View
      style={
        {
          "alignItems": "center",
          "alignSelf": "center",
          "height": 100,
          "overflow": "hidden",
          "position": "absolute",
          "top": 36,
          "width": 116,
        }
      }
    >
      <Text />
    </View>,
  ],
  "style": {
    "alignItems": "center",
  },
  "testID": "container",
}
`;

exports[`SegmentedArc sets the arc starting point 1`] = `
{
  "children": [
    <Svg
      height={126}
      preserveAspectRatio="xMidYMid meet"
      width={240}
    >
      <Context.Provider
        value={
          {
            "animationDuration": 1000,
            "arcAnimatedValue": 0,
            "arcSegmentDegree": 43.5,
            "arcsStart": 420,
            "capInnerColor": "#28E037",
            "capOuterColor": "#FFFFFF",
            "center": 120,
            "emptyArcWidth": 8,
            "filledArcWidth": 8,
            "isAnimated": true,
            "lastFilledSegment": {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Fourth Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 598,
              "filled": 598,
              "filledColor": "#0000FF",
              "isComplete": true,
              "start": 555,
            },
            "margin": 12,
            "radius": 100,
            "ranges": [],
            "rangesTextColor": "#000000",
            "rangesTextStyle": {
              "fontSize": 12,
            },
            "spaceBetweenSegments": 2,
            "totalArcs": 4,
          }
        }
      >
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "First Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 463,
              "filled": 463,
              "filledColor": "#FF0000",
              "isComplete": true,
              "start": 420,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Second Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 508,
              "filled": 508,
              "filledColor": "#FFA500",
              "isComplete": true,
              "start": 465,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Third Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 553,
              "filled": 553,
              "filledColor": "#00FF00",
              "isComplete": true,
              "start": 510,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Fourth Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 598,
              "filled": 598,
              "filledColor": "#0000FF",
              "isComplete": true,
              "start": 555,
            }
          }
        />
        <Cap />
      </Context.Provider>
    </Svg>,
    undefined,
  ],
  "style": {
    "alignItems": "center",
  },
  "testID": "container",
}
`;

exports[`SegmentedArc sets the last segment for lastFilledSegment prop when fillValue is equal or greater than 100% 1`] = `
{
  "children": [
    <Svg
      height={126}
      preserveAspectRatio="xMidYMid meet"
      width={240}
    >
      <Context.Provider
        value={
          {
            "animationDuration": 1000,
            "arcAnimatedValue": 0,
            "arcSegmentDegree": 43.5,
            "arcsStart": 0,
            "capInnerColor": "#28E037",
            "capOuterColor": "#FFFFFF",
            "center": 120,
            "emptyArcWidth": 8,
            "filledArcWidth": 8,
            "isAnimated": true,
            "lastFilledSegment": {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Fourth Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 178,
              "filled": 178,
              "filledColor": "#0000FF",
              "isComplete": true,
              "start": 135,
            },
            "margin": 12,
            "radius": 100,
            "ranges": [],
            "rangesTextColor": "#000000",
            "rangesTextStyle": {
              "fontSize": 12,
            },
            "spaceBetweenSegments": 2,
            "totalArcs": 4,
          }
        }
      >
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "First Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 43,
              "filled": 43,
              "filledColor": "#FF0000",
              "isComplete": true,
              "start": 0,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Second Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 88,
              "filled": 88,
              "filledColor": "#FFA500",
              "isComplete": true,
              "start": 45,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Third Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 133,
              "filled": 133,
              "filledColor": "#00FF00",
              "isComplete": true,
              "start": 90,
            }
          }
        />
        <Segment
          arc={
            {
              "centerX": 120,
              "centerY": 120,
              "data": {
                "label": "Fourth Segment",
              },
              "emptyColor": "#F2F3F5",
              "end": 178,
              "filled": 178,
              "filledColor": "#0000FF",
              "isComplete": true,
              "start": 135,
            }
          }
        />
        <Cap />
      </Context.Provider>
    </Svg>,
    undefined,
  ],
  "style": {
    "alignItems": "center",
  },
  "testID": "container",
}
`;
